--- a/i3/config
+++ b/i3/config
@@ -51,7 +51,7 @@ bindsym $mod+Return exec  alacritty
 bindsym $mod+Shift+q kill
 
 # start dmenu (a program launcher)
-bindsym $mod+d exec rofi -show run -lines 3 -eh 2 -font "Verdana"
+bindsym $mod+d exec rofi -show drun -config ~/.config/rofi/config.rasi
 # A more modern dmenu replacement is rofi:
 # bindcode $mod+40 exec "rofi -modi drun,run -show drun -opacity "30""
 # There also is i3-dmenu-desktop which only displays applications shipping a
