--- a/i3/config
+++ b/i3/config
@@ -28,6 +28,7 @@ exec --no-startup-id dex --autostart --environment i3
 
 # xss-lock grabs a logind suspend inhibit lock and will use i3lock to lock the
 # screen before suspend. Use loginctl lock-session to lock your screen.
+bindsym $mod+Shift+x exec i3lock 
 exec --no-startup-id xss-lock --transfer-sleep-lock -- i3lock --nofork
 
 # NetworkManager is the most popular way to manage wireless networks on Linux,
@@ -51,7 +52,7 @@ bindsym $mod+Return exec  alacritty
 bindsym $mod+Shift+q kill
 
 # start dmenu (a program launcher)
-bindsym $mod+d exec rofi -show drun -config ~/.config/rofi/config.rasi
+bindsym $mod+d exec rofi -show drun -lines 3 -eh 2 -width 100 -padding 800 -bw 0 -bc "$bg-color" -bg "$bg-color" -fg "$text-color" -hlbg "$bg-color" -hlfg "#9575cd"  -config ~/.config/rofi/config.rasi
 # A more modern dmenu replacement is rofi:
 # bindcode $mod+40 exec "rofi -modi drun,run -show drun -opacity "30""
 # There also is i3-dmenu-desktop which only displays applications shipping a
@@ -179,12 +180,32 @@ mode "resize" {
 
 bindsym $mod+r mode "resize"
 
+set $bg-color 	         #2f343f
+set $inactive-bg-color   #2f343f
+set $text-color          #f3f4f5
+set $inactive-text-color #676E7D
+set $urgent-bg-color     #E53935
+# window colors
+#                       border              background         text                 indicator
+client.focused          $bg-color           $bg-color          $text-color          #00ff00
+client.unfocused        $inactive-bg-color $inactive-bg-color $inactive-text-color #00ff00
+client.focused_inactive $inactive-bg-color $inactive-bg-color $inactive-text-color #00ff00
+client.urgent           $urgent-bg-color    $urgent-bg-color   $text-color          #00ff00
+
+
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
-
 bar {
-        status_command i3status
+    status_command i3status 
 	position top 
+    colors {
+		background $bg-color
+	    	separator #757575
+		#                  border             background         text
+		focused_workspace  $bg-color          $bg-color          $text-color
+		inactive_workspace $inactive-bg-color $inactive-bg-color $inactive-text-color
+		urgent_workspace   $urgent-bg-color   $urgent-bg-color   $text-color
+	}
 }
 exec_always --no-startup-id $HOME/.config/polybar/launch.sh
 exec_always feh --bg-scale /home/sarah/Pictures/Wallpapers/lalou.jpeg
@@ -201,3 +222,5 @@ bindsym $mod+Ctrl+less move workspace to output left
 
 exec --no-startup-id xautolock -time 2 -locker i3lock &
 bindsym $mod+F1 exec --no-startup-id i3lock -c 0000
+exec_always --no-startup-id dunst
+exec-always --nostart-up-id arandr
