--- a/i3status/i3status.conf
+++ b/i3status/i3status.conf
@@ -18,7 +18,6 @@ order += "disk /"
 order += "disk /home"
 order += "wireless wlan0"
 order += "ethernet tun0"
-order += "cpu_temperature 0"
 order += "battery 0"
 order += "load"
 order += "volume master"
@@ -34,11 +33,7 @@ ethernet tun0 {
         format_down = ""
 }
 
-cpu_temperature 0 {
-        format = " %degrees°C"
-	max_threshold = 65
-        path = "/sys/devices/platform/coretemp.0/hwmon/hwmon1/temp1_input"
-}
+
 
 battery 0 {
         last_full_capacity = true
@@ -48,7 +43,7 @@ battery 0 {
         status_bat = "  BAT"
         status_unk = ""
         status_full = "☻ FULL"
-        path = "/sys/class/power_supply/BAT%d/uevent"
+        path = "/sys/class/power_supply/BAT1/uevent"
         low_threshold = 10
 }
 
