--- a/i3status/config
+++ b/i3status/config
@@ -14,17 +14,14 @@ general {
 	color_degraded = "#ECBE7B"
 }
 
-order += "disk /"
-order += "disk /home"
 order += "wireless wlp4s0"
 order += "ethernet tun0"
 order += "battery 0"
-order += "load"
 order += "volume master"
 order += "tztime local"
 
 wireless wlp4s0 {
-        format_up = "  %essid (%ip/%quality/%bitrate)"
+        format_up = "  %essid"
         format_down = "✗"
 }
 
