--- a/picom/picom.conf
+++ b/picom/picom.conf
@@ -18,5 +18,6 @@ blur_strength = 6;
 opacity-rule = [
 	"90:class_g = 'Alacritty && focused'",
 	"70:class_g = 'Alacritty && !focused'",
-	"50:class_g = 'Rofi'"
+	"90:class_g = 'Rofi'",
+    "90:class_g = 'Dunst'"
 ];
